// Copyright 2021 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipes.infra.cv_testing.tryjob;

// Input properties recognized by 'infra/cv_testing/tryjob' recipe.
message Input {
  bool reuse_own_mode_only = 1;
  bool fail = 2;
  bool infra_fail = 3;
}
